tests/cases/fail/null_to_int.cs
class Program { static void Main() { int n = null; } }
